<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_node_add_attribute"
        android:icon="@drawable/ic_action_add_attr"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_attribute">
        <menu>
            <item
                android:id="@+id/action_attr_custom"
                android:title="@string/action_add_attribute_custom"/>
            <item
                android:id="@+id/action_attr_namespace"
                android:title="@string/action_add_namespace"/>
            <item
                android:id="@+id/action_attr_default_namespace"
                android:title="@string/action_add_default_namespace"/>
            <item
                android:id="@+id/action_attr_xml_schema_public"
                android:title="@string/action_add_xml_schema_public"/>
            <item
                android:id="@+id/action_attr_xml_schema_local"
                android:title="@string/action_add_xml_schema_local"/>
        </menu>
    </item>

</menu>