<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ui_hint_version"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/editTextEncoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ui_hint_encoding"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium" >
    </EditText>

    <CheckBox
        android:id="@+id/checkStandalone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ui_standalone" />

</LinearLayout>