<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextPrefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ui_hint_prefix"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ui_hint_name"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium" >
    </EditText>

    <EditText
        android:id="@+id/editTextValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/ui_hint_value"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium" >
    </EditText>

</LinearLayout>