<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fr.xgouchet.xmleditor.ui.widget.ClearableEditText
        android:id="@+id/edit_text_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/ui_hint_version"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="20sp" >
    </fr.xgouchet.xmleditor.ui.widget.ClearableEditText>

    <fr.xgouchet.xmleditor.ui.widget.ClearableEditText
        android:id="@+id/edit_text_encoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_version"
        android:ems="10"
        android:hint="@string/ui_hint_encoding"
        android:inputType="textNoSuggestions"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="20sp" >

        <requestFocus />
    </fr.xgouchet.xmleditor.ui.widget.ClearableEditText>

    <CheckBox
        android:id="@+id/check_standalone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_encoding"
        android:layout_margin="5dp"
        android:text="@string/ui_standalone" />

</RelativeLayout>